@@ -75,3 +75,5 @@ Version 1.3.1
 Version 1.4.0
 
 + Implemented RubyArray#pack()
+
++ Added RubyFile::join
